libs/bng/test/negative/N0212_rxn_component_used_only_on_one_wo_state.bngl
# FAIL
# OUTPUT: error: Bond with numerical value '1' must bind different molecules of a complex pattern of a rule.
#
# NOTE: BNG2.pl reports Component with state attribute defined in reactant pattern cannot map to component with undefined state attribute in product pattern

begin parameters
   kp 0.00001
   km 1
end parameters

begin molecule types
   A(a,p~0~1)
end molecule types

begin reaction rules
  A(a,p~0) + A(a) <-> A(a!1).A(a!1,p) kp, km
end reaction rules
